--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,29 +1,56 @@
+<%= javascript_include_tag :application %>
+
 <p id="notice"><%= notice %></p>
 
-<h1>Members</h1>
+<center class='hero'>
+<h1> <%= @community.label %></h1>
+<h2>Kharma Balance: <%= @community.balance %></h2>
+<p ><%= image_tag("/assets/community.jpg", width: "200px", height: "200px") %></p>
 
+</center>
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Balance</th>
-      <th colspan="3"></th>
+       <% @members.each do |member| %>
+        <th width="25%"><%= member.name %> (<%= link_to 'Edit', edit_member_path(member) %>)</th>
+        <% end %>
     </tr>
   </thead>
 
   <tbody>
-    <% @members.each do |member| %>
       <tr>
-        <td><%= member.name %></td>
-        <td><%= member.balance %></td>
-        <td><%= link_to 'Show', member %></td>
-        <td><%= link_to 'Edit', edit_member_path(member) %></td>
-        <td><%= link_to 'Destroy', member, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <% @members.each do |member| %>
+        <td><%= image_tag("/assets/" + member.name + ".png", width: "50px", height: "50px") %></td>
     <% end %>
+      </tr>
+            
+      <tr>
+    <% @members.each do |member| %>
+        <td><%= member.description %></td>
+    <% end %>
+      </tr>
+      
+            <tr>
+    <% @members.each do |member| %>
+        <td><%= image_tag("/assets/" + member.name + "1.jpg") %></td>
+    <% end %>
+      </tr>
+      
+      <tr>
+    <% @members.each do |member| %>
+        <td><%= member.balance %> Punkte</td>
+    <% end %>
+      </tr>
+      
+       <tr>
+    <% @members.each do |member| %>
+        <td><%= link_to 'Belohnen', members_reward_path(member)%>
+        <%= link_to 'Spenden', members_donate_path(member) %>
+        <%= link_to 'Auszahlen', members_exchange_path(member), data: { confirm:  '100 Punkte werden konvertiert und auf das Taschengeldkonto von ' + member.name + ' eingezahlt.' }  %>
+        </td>
+    <% end %>
+      </tr>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Member', new_member_path %>
+<!-- <%= link_to 'New Member', new_member_path %> -->
