--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -4,7 +4,7 @@
 
 <center class='hero'>
 <h1> <%= @community.label %></h1>
-<h2>Kharma Balance: <%= @community.balance %></h2>
+<h2>Karma Balance: <%= @community.balance %></h2>
 <p ><%= image_tag("/assets/community.jpg", width: "200px", height: "200px") %></p>
 
 </center>
